--- a/requirements.txt
+++ b/requirements.txt
@@ -229,6 +229,7 @@ tblib==1.6.0
 tensorboard==2.1.1
 tensorflow==2.1.0
 tensorflow-estimator==2.1.0
+tesseract==0.1.3
 termcolor==1.1.0
 terminado==0.8.3
 testpath==0.4.4
